[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.5.6"

[dependencies.web-sys]
version = "0.3.91"
features = ["console"]

[dev-dependencies]
rstest = "0.26.1"
